@@ -5,6 +5,7 @@ Release date: July 11, 2023
 * Fixed: Team Member Carousel - Images were not appearing in the editor
 * Fixed: Team Member Carousel - Arrow style options were not working
 * Fixed: Info Box Carousel - Images were not appearing in the editor
+* Fixed: Logo Carousel - Pagination dots styling options were not working
 
 == 2.7.7 ==
 Release date: June 21, 2023
